syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "baby.mumu.unique.client.api.grpc";
option java_outer_classname = "CaptchaServiceProto";

service CaptchaService {
  rpc generateSimpleCaptcha (SimpleCaptchaGeneratedGrpcCmd) returns (SimpleCaptchaGeneratedGrpcDTO);
  rpc verifySimpleCaptcha (SimpleCaptchaVerifyGrpcCmd) returns (SimpleCaptchaVerifyGrpcResult);
}

message SimpleCaptchaGeneratedGrpcCmd {
  int64 ttl = 1;
  int32 length = 2;
}
message SimpleCaptchaGeneratedGrpcDTO {
  int64 id = 1;
  string target = 2;
  int64 ttl = 3;
  int32 length = 4;
}
message SimpleCaptchaVerifyGrpcCmd {
  int64 id = 1;
  string source = 2;
}

message SimpleCaptchaVerifyGrpcResult {
  bool result = 1;
}
